@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Experimental support for Mojolicious without EV (use 'mojo' as implementation)
+  - Use IO::Select for actual non-blocking on windows
+    (fixes bug introduced in 0.85)
 
 0.85      2016-01-13 14:59:03 -0500
   - MSWin32 supports EV again.
